--- a/annelida.html
+++ b/annelida.html
@@ -44,14 +44,18 @@
                 <h1 class="text-center" style="/*align-self: center;*/">Annelida</h1>
             </div>
             <div class="col-md-4">
-                <div class="btn-group" role="group" style="margin-top: 18px;margin-left: 43px;background: var(--bs-black);"><button class="btn btn-primary" type="button" style="background: var(--bs-white);border-width: 0px;border-style: double;"><i class="fas fa-arrow-left" style="background: #ffffff;color: black;"></i></button><button class="btn btn-primary" type="button" style="background: rgb(255,255,255);border-width: 0px;border-style: double;"><i class="fas fa-arrow-right" style="background: #ffffff;color: black;"></i></button></div>
+                <div class="btn-group" role="group" style="margin-top: 18px;margin-left: 43px;background: var(--bs-black);"><button class="btn btn-primary" type="button" style="background: var(--bs-white);border-width: 0px;border-style: double;">
+                    <i class="fas fa-arrow-left" style="background: #ffffff;color: black;"></i>
+                        </button><button class="btn btn-primary" type="button" style="background: rgb(255,255,255);border-width: 0px;border-style: double;">
+                            <i class="fas fa-arrow-right" style="background: #ffffff;color: black;"></i></button></div>
             </div>
         </div>
     </div>
     <div class="container mb-5">
         <div class="row">
             <div class="col-md-6 col-xl-8 col-xxl-8 card-side" style="border-color: #52d1ff;border-top-color: #52d1ff;border-right-color: #52d1ff;border-bottom-color: #52d1ff;border-left-color: #52d1ff;">
-                <div class="card" style="width: 215px;height: 215px;"><img class="card-img-top w-100 d-block" style="padding-bottom: 0px;border-bottom-color: 52d1ff;height: 115px;" width="213" height="115">
+                <div class="card" style="width: 215px;height: 215px; background-color: #52d1ff"><img class="card-img-top w-100 d-block" style="padding-bottom: 0px;border-bottom-color: 52d1ff;height: 115px;" width="213" height="115">
+                    <img class="card-img-top" src"..." alt = "">
                     <div class="card-body" style="margin-top: 2px;border-bottom-color: 52d1ff;">
                         <p class="card-text">Earthworm xs setae&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Cross Section&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Qty: 11</p>
                     </div>
